--- a/GUMS/Components/Layout/NavMenu.razor
+++ b/GUMS/Components/Layout/NavMenu.razor
@@ -14,7 +14,7 @@
     <nav class="nav flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-house-door-fill" aria-hidden="true"></span> Home
             </NavLink>
         </div>
 
@@ -31,8 +31,20 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Meetings/Alerts">
+                <span class="bi bi-exclamation-triangle" aria-hidden="true"></span> Attendance Alerts
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="Configuration/Terms">
                 <span class="bi bi-calendar-event" aria-hidden="true"></span> Term Dates
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Configuration/Settings">
+                <span class="bi bi-gear" aria-hidden="true"></span> Unit Settings
             </NavLink>
         </div>
 
